--- a/package.json
+++ b/package.json
@@ -12,21 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
-    "aws-sdk": "^2.1616.0",
     "axios": "^1.7.2",
-    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "g": "^2.0.1",
     "ioredis": "^5.4.1",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.3",
     "pino": "^9.3.2",
     "pm2": "^5.3.1",
-    "socket.io": "^4.7.5",
-    "uuid": "^9.0.1"
+    "socket.io": "^4.7.5"
   }
 }
