--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "aviator-project-node",
+  "name": "jetx_backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "npx tsc && node dist/index.js",
+    "dev": "nodemon --watch src --exec ts-node src/index.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.10.4",
-    "axios": "^1.7.5",
+    "amqplib": "^0.10.7",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "ioredis": "^5.4.1",
-    "mysql2": "^3.9.7",
-    "nodemon": "^3.1.3",
-    "pino": "^9.3.2",
-    "pm2": "^5.3.1",
-    "socket.io": "^4.7.5"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "ioredis": "^5.6.1",
+    "mysql2": "^3.14.0",
+    "pino": "^9.6.0",
+    "redis": "^4.7.0",
+    "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "@types/amqplib": "^0.10.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.14.1",
+    "@types/socket.io": "^3.0.1",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
